    will fail with crash.
  * [iOS] Fixed a bug where #tap and #rotate_device cause a crash when it run
    `rake spec' with x86_64.
  * [iOS] Fixed a bug where all rake task could not be ran in root directory of
    Extension/Framework. So, CocoaPods libraries cannot be installed.
  * [iOS] Fixed a bug where the shared framework was not built with 64-bit.
  * [iOS] Added launch images for iPhone 6 and iPhone 6 Plus. Thanks to
    Hwee-Boon Yar for the patch (pull request #170).
  * Fixed a regression where it would cause a link error in Xcode project when
    it uses a static library which it was generated by `rake static'.
  * Fixed a bug where wrong Boxed object will be returned from Objective-C method.
  * Fixed the `motion support' command invocation to print both the stable and
    pre-release versions of RubyMotion.
  * Fixed a bug which it would triggered "Symbol not found" when it will use a
    constant which is not contained in older SDK.
  * Fixed a bug which it would not solve framework dependencies in embedded
    frameworks.

= RubyMotion 2.38 =

  * Optimized the app executable size when a project has too many Ruby source
    files, by removing unnecessary internal code. ~30-60% lighter.
  * Disabled armv7s support for iOS projects. If you want to add armv7s support
    back, simply add the 'armv7s' value to the `app.archs['iPhoneOS']' config
    in the project's Rakefile. This architecture is no longer enabled by
    default in Xcode.
  * Fixed a bug where a compiled Core Data model would be removed when cleaning
    when an original `xcdatamodeld' was not available.
  * Fixed a bug where in certain circumstances cleaning would try to be
    performed when the vendor dir, e.g. `vendor/Pods' did not exist.
  * Fixed a few cases where the Yosemite version number was parsed incorrectly.
  * Added support for `axel' as an alternative to `curl' when downloading
    updates, which supports resuming and uses 10 connections to improve speed.